# ChatGuardian

./: .env.example  .gitignore  ADAPTER_AUTO_STARTUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  ONEBOT_MIGRATION_SUMMARY.md  ONEBOT_REVERSE_WEBSOCKET_SETUP.md  README.md  README_en.md  README_fr.md  README_ja.md  README_ko.md  README_ru.md  README_zh-CN.md  README_zh-TW.md  TODO.md  alembic.ini  db.sqlite  docker-compose.yml  pyproject.toml  test_chat.db  test_db.sqlite  test_logging_import.py  tmp_api_test.py
.github/workflows/: docker-image.yml  release.yml  tests.yml
chat_guardian/: __init__.py  adapters.py  agent.py  context_window.py  detection_engine.py  domain.py  external_hook.py  gradio_temp_ui.py  llm_client.py  main.py  matcher.py  mcp.py  models.py  prompts.py  pyproject.toml  repositories.py  rule_batch.py  services.py  settings.py  streamlit_rule_dashboard.py  streamlit_ui.py  user_memory.py  user_memory_service.py  utils.py
chat_guardian/adapters/: __init__.py  base.py  dingtalk.py  discord.py  feishu.py  manager.py  onebot.py  telegram.py  utils.py  virtual.py  wechat.py
chat_guardian/alembic/: env.py
chat_guardian/alembic/versions/: 20260318_01_runtime_schema_compat.py
chat_guardian/api/: __init__.py  app.py  schemas.py
chat_guardian/notifiers/: __init__.py  bark.py  base.py  email.py
chat_guardian/rule_authoring/: __init__.py  base.py  external.py  internal.py  service.py  utils.py
chat_guardian/ui/: app.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  router.tsx
frontend/src/api/: adapters.ts  agent.ts  auth.ts  client.ts  dashboard.ts  logs.ts  queues.ts  rules.ts  settings.ts  stats.ts  types.ts  users.ts
frontend/src/components/: AppLayout.tsx  RowSteps.tsx  ToastProvider.tsx
frontend/src/components/MatcherEditor/: index.tsx
frontend/src/components/auth/: AuthGuard.tsx  SetupGuard.tsx
frontend/src/components/charts/: StatsCard.tsx  TriggerChart.tsx
frontend/src/constants/: iconSizes.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.tsx  useTheme.ts
frontend/src/pages/: AdaptersPage.tsx  AgentChatPage.tsx  ChangePasswordPage.tsx  DashboardPage.tsx  FrequentContactDetailPage.tsx  LLMPage.tsx  LoginPage.tsx  LogsPage.tsx  NotificationsPage.tsx  QueuesPage.tsx  RuleTriggerDetailPage.tsx  RulesPage.tsx  SettingsPage.tsx  SetupPage.tsx  SetupWizardPage.tsx  TriggerStatsPage.tsx  UserProfileDetailPage.tsx  UserProfilesPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: chatLabels.ts  dates.ts  uuid.ts
scripts/: force_reset_admin.py  run_virtual_adapter_detection_deepseek.py
tests/: conftest.py  test_alembic_migrations.py  test_api_smoke.py  test_bark_notifier.py  test_detection_engine.py  test_detection_triggers.py  test_email_notifier.py  test_frontend_browser.py  test_frontend_e2e.py  test_langchain_client.py  test_llm_backend_factory.py  test_matcher_union.py  test_mcp_service.py  test_notification_test_api.py  test_onebot_adapter.py  test_prompt_settings.py  test_rule_batch_scheduler.py  test_rule_generation.py  test_setup_flow.py  test_user_memory_profile.py  test_virtual_adapter_deepseek_integration.py  test_virtual_adapter_detection_deepseek.py  test_virtual_adapter_script_loader.py
(+12 files in other folders)
