[tool.poetry]
name = "chat-guardian"
version = "0.1.0"
description = "LLM-powered cross-platform chat topic guardian"
authors = ["Ljzd-PRO <me@ljzd.link>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"
sqlalchemy = "^2.0.48"
aiosqlite = "^0.22.1"
alembic = "^1.16.0"
httpx = "^0.28.1"
aiosmtplib = "^5.1.0"
aiocqhttp = "^1.4.3"
langchain = "^1.2.11"
langchain-openai = "^1.1.11"
langchain-ollama = "^1.0.1"
langchain-google-genai = "^2.1.4"
langchain-anthropic = "^0.3.10"
jinja2 = "^3.1.6"
python-dotenv = "^1.2.2"
orjson = "^3.11.3"
huggingface-hub = "^1.6.0"
streamlit = "^1.55.0"
pylint-pydantic = "^0.4.1"
loguru = "^0.7.3"
python-telegram-bot = "^22.0"
fastmcp = "3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
playwright = "^1.58.0"
ruff = "^0.12.10"
mypy = "^1.17.1"

[tool.poetry.scripts]
chat-guardian = "chat_guardian.main:run"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pylint]
load-plugins = "pylint_pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
